--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.3",
   "description": "Wrapper around axios requests to supplement redux calls, request state handling and response processing",
   "main": "dist/index.js",
+  "module": "dist/index.esm.js",
   "scripts": {
-    "build": "rimraf dist && tsc --emitDeclarationOnly && rollup --config",
+    "build": "rimraf dist && rollup --c",
     "tsc": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
