--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,33 +1,20 @@
 {
-  "include": [
-    "src/**/*.ts",
-    "src/**/*.tsx"
-  ],
+  "compilerOptions": {
+    "rootDir": "src",
+    "declaration": true,
+    "declarationDir": "dist",
+    "module": "esnext",
+    "target": "es5",
+    "lib": ["es6", "dom", "es2016", "es2017"],
+    "sourceMap": false,
+    "jsx": "react",
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true
+  },
+  "include": ["src/**/*"],
   "exclude": [
     "node_modules",
     "dist"
-  ],
-  "compilerOptions": {
-    "outDir": "dist",
-    "rootDir": "src",
-    "target": "es5",
-    "module": "esnext",
-    "lib": [
-      "es2017",
-      "dom"
-    ],
-    "types": [],
-    "allowJs": false,
-    "jsx": "react",
-    "declaration": true,
-    "sourceMap": true,
-    "removeComments": true,
-    "strict": true,
-    "moduleResolution": "node",
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
-    "resolveJsonModule": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
-  }
+  ]
 }
